src/c_parser.output
Nonterminals useless in grammar

    EXPRS
    SHIFT
    PAR


Terminals unused in grammar

    T_TWOLESS
    T_TWOGREAT
    T_DOT


Rules useless in grammar

  117 EXPRS: E1 T_COMMA EXPRS
  118      | E1


State 50 conflicts: 16 shift/reduce
State 81 conflicts: 16 shift/reduce
State 84 conflicts: 16 shift/reduce
State 88 conflicts: 16 shift/reduce
State 94 conflicts: 1 shift/reduce
State 103 conflicts: 16 shift/reduce, 3 reduce/reduce
State 129 conflicts: 16 shift/reduce
State 132 conflicts: 16 shift/reduce
State 140 conflicts: 1 shift/reduce
State 156 conflicts: 16 shift/reduce
State 197 conflicts: 7 shift/reduce
State 220 conflicts: 1 shift/reduce
State 221 conflicts: 16 shift/reduce
State 222 conflicts: 16 shift/reduce
State 234 conflicts: 16 shift/reduce
State 235 conflicts: 1 shift/reduce
State 236 conflicts: 17 shift/reduce
State 238 conflicts: 1 shift/reduce
State 248 conflicts: 16 shift/reduce
State 253 conflicts: 16 shift/reduce
State 261 conflicts: 1 shift/reduce
State 262 conflicts: 16 shift/reduce
State 267 conflicts: 16 shift/reduce
State 270 conflicts: 16 shift/reduce
State 273 conflicts: 16 shift/reduce
State 275 conflicts: 1 shift/reduce
State 277 conflicts: 16 shift/reduce
State 281 conflicts: 16 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: FUNCTIONS

    2 FUNCTIONS: FUNCT
    3          | FUNCT FUNCTIONS
    4          | T_INT T_VARIABLE T_LSQ T_NUMBER T_RSQ T_EOL FUNCTIONS
    5          | T_INT T_VARIABLE T_ASSIGN E1 T_EOL FUNCTIONS
    6          | T_VARIABLE T_ASSIGN E1 T_EOL FUNCTIONS
    7          | T_INT T_VARIABLE T_EOL FUNCTIONS

    8 FUNCT: T_INT T_VARIABLE FINALPARAMS T_OPEN LINES T_CLOSE
    9      | T_VOID T_VARIABLE FINALPARAMS T_OPEN LINES T_CLOSE
   10      | T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   11      | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   12      | T_INT T_VARIABLE FINALPARAMS T_EOL
   13      | T_VOID T_VARIABLE FINALPARAMS T_EOL
   14      | T_INT T_VARIABLE T_LBRACKET T_RBRACKET T_EOL
   15      | T_VOID T_VARIABLE T_LBRACKET T_RBRACKET T_EOL
   16      | AN_UNSIGNED T_VARIABLE FINALPARAMS T_OPEN LINES T_CLOSE
   17      | AN_UNSIGNED T_VARIABLE T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   18      | AN_UNSIGNED T_VARIABLE FINALPARAMS T_EOL

   19 LINES: LINE LINES
   20      | LINE

   21 LINE: T_INT T_VARIABLE T_ASSIGN E1 T_EOL
   22     | T_VARIABLE T_ASSIGN E1 T_EOL
   23     | AN_UNSIGNED T_VARIABLE T_ASSIGN E1 T_EOL
   24     | E1 T_EOL
   25     | T_INT T_VARIABLE T_EOL
   26     | T_RETURN E1 T_EOL
   27     | T_WHILE T_LBRACKET E1 T_RBRACKET LINE
   28     | T_WHILE T_LBRACKET E1 T_RBRACKET T_OPEN LINES T_CLOSE
   29     | T_WHILE T_LBRACKET E1 T_RBRACKET T_OPEN T_CLOSE
   30     | T_IF T_LBRACKET E1 T_RBRACKET LINE
   31     | T_IF T_LBRACKET E1 T_RBRACKET LINE T_ELSE LINE
   32     | T_IF T_LBRACKET E1 T_RBRACKET LINE T_ELSE T_OPEN LINES T_CLOSE
   33     | T_IF T_LBRACKET E1 T_RBRACKET T_OPEN LINES T_CLOSE
   34     | T_IF T_LBRACKET E1 T_RBRACKET T_OPEN LINES T_CLOSE T_ELSE LINE
   35     | T_IF T_LBRACKET E1 T_RBRACKET T_OPEN LINES T_CLOSE T_ELSE T_OPEN LINES T_CLOSE
   36     | T_INT T_VARIABLE T_LSQ T_NUMBER T_RSQ T_EOL
   37     | T_VARIABLE T_LSQ E1 T_RSQ T_ASSIGN E1 T_EOL
   38     | %empty
   39     | T_FOR T_LBRACKET LINE LINE LINE2 T_RBRACKET LINE
   40     | T_FOR T_LBRACKET LINE LINE LINE2 T_RBRACKET T_OPEN LINES T_CLOSE
   41     | T_CONT T_EOL
   42     | T_BREAK T_EOL
   43     | T_VARIABLE T_PE E1 T_EOL
   44     | T_VARIABLE T_ME E1 T_EOL
   45     | T_VARIABLE T_TE E1 T_EOL
   46     | T_VARIABLE T_DE E1 T_EOL
   47     | T_VARIABLE T_MODE E1 T_EOL
   48     | T_VARIABLE T_OE E1 T_EOL
   49     | T_VARIABLE T_XE E1 T_EOL
   50     | T_VARIABLE T_AE E1 T_EOL
   51     | T_VARIABLE T_LSE E1 T_EOL
   52     | T_VARIABLE T_RSE E1 T_EOL
   53     | T_SWITCH T_LBRACKET E1 T_RBRACKET T_OPEN SWITCH_BODY T_CLOSE
   54     | T_INT T_TIMES T_VARIABLE T_EOL
   55     | T_INT T_TIMES T_VARIABLE T_ASSIGN T_BAND T_VARIABLE T_EOL
   56     | T_VARIABLE T_ASSIGN T_BAND T_VARIABLE T_EOL
   57     | T_TIMES T_VARIABLE T_ASSIGN E1 T_EOL

   58 AN_UNSIGNED: T_UNSIGNED
   59            | T_UNSIGNED T_INT

   60 SWITCH_BODY: T_CASE T_NUMBER T_COLON LINES SWITCH_BODY
   61            | T_CASE T_NUMBER T_COLON LINES
   62            | T_DEFAULT T_COLON LINES

   63 LINE2: T_VARIABLE T_ASSIGN E1
   64      | E1
   65      | T_VARIABLE T_LSQ E1 T_RSQ T_ASSIGN E1
   66      | %empty

   67 FINALPARAMS: T_LBRACKET PARAMS T_RBRACKET

   68 PARAMS: T_INT T_VARIABLE T_COMMA PARAMS
   69       | T_INT T_VARIABLE

   70 E1: E12
   71   | E1 T_LOR E12

   72 E12: E21
   73    | E12 T_LAND E21

   74 E21: E2
   75    | E21 T_BOR E2

   76 E2: E3
   77   | E2 T_XOR E3

   78 E3: E4
   79   | E3 T_BAND E4

   80 E4: C1
   81   | E4 T_ALS C1
   82   | E4 T_ARS C1

   83 C1: C2
   84   | C1 T_ASSIGN T_ASSIGN C2
   85   | C1 T_NOT T_ASSIGN C2

   86 C2: EXPR
   87   | C2 T_LESS EXPR
   88   | C2 T_LESSEQUAL EXPR
   89   | C2 T_GREAT EXPR
   90   | C2 T_GREATEQUAL EXPR

   91 EXPR: TERM
   92     | EXPR T_PLUS TERM
   93     | EXPR T_MINUS TERM

   94 TERM: UNARY
   95     | TERM T_TIMES UNARY
   96     | TERM T_DIVIDE UNARY
   97     | TERM T_MOD UNARY

   98 UNARY: FACTOR
   99      | T_MINUS FACTOR

  100 IDK: E1
  101    | IDK T_COMMA E1

  102 FACTOR: T_NUMBER
  103       | T_VARIABLE
  104       | T_VARIABLE T_LBRACKET T_RBRACKET
  105       | T_VARIABLE T_LBRACKET E1 T_RBRACKET
  106       | T_VARIABLE T_LBRACKET E1 T_COMMA E1 T_RBRACKET
  107       | T_VARIABLE T_LBRACKET E1 T_COMMA E1 T_COMMA E1 T_RBRACKET
  108       | T_VARIABLE T_LBRACKET E1 T_COMMA E1 T_COMMA E1 T_COMMA E1 T_RBRACKET
  109       | T_VARIABLE T_LBRACKET E1 T_COMMA E1 T_COMMA E1 T_COMMA E1 T_COMMA IDK T_RBRACKET
  110       | T_LBRACKET E1 T_RBRACKET
  111       | T_VARIABLE T_LSQ E1 T_RSQ
  112       | T_PP T_VARIABLE
  113       | T_MM T_VARIABLE
  114       | T_VARIABLE T_PP
  115       | T_VARIABLE T_MM
  116       | T_TIMES T_VARIABLE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_INT (258) 4 5 7 8 10 12 14 21 25 36 54 55 59 68 69
    T_PP (259) 112 114
    T_PE (260) 43
    T_MM (261) 113 115
    T_ME (262) 44
    T_DE (263) 46
    T_TE (264) 45
    T_MODE (265) 47
    T_AE (266) 50
    T_OE (267) 48
    T_RSE (268) 52
    T_LSE (269) 51
    T_XE (270) 49
    T_ASSIGN (271) 5 6 21 22 23 37 55 56 57 63 65 84 85
    T_BAND (272) 55 56 79
    T_BOR (273) 75
    T_NOT (274) 85
    T_XOR (275) 77
    T_LESS (276) 87
    T_GREAT (277) 89
    T_LAND (278) 73
    T_LOR (279) 71
    T_ARS (280) 82
    T_ALS (281) 81
    T_TWOLESS (282)
    T_TWOGREAT (283)
    T_LESSEQUAL (284) 88
    T_GREATEQUAL (285) 90
    T_TIMES (286) 54 55 57 95 116
    T_DIVIDE (287) 96
    T_PLUS (288) 92
    T_MINUS (289) 93 99
    T_MOD (290) 97
    T_LBRACKET (291) 10 11 14 15 17 27 28 29 30 31 32 33 34 35 39 40 53 67 104 105 106 107 108 109 110
    T_RBRACKET (292) 10 11 14 15 17 27 28 29 30 31 32 33 34 35 39 40 53 67 104 105 106 107 108 109 110
    T_OPEN (293) 8 9 10 11 16 17 28 29 32 33 34 35 40 53
    T_CLOSE (294) 8 9 10 11 16 17 28 29 32 33 34 35 40 53
    T_COMMA (295) 68 101 106 107 108 109
    T_LSQ (296) 4 36 37 65 111
    T_RSQ (297) 4 36 37 65 111
    T_COLON (298) 60 61 62
    T_DOT (299)
    T_NUMBER <string> (300) 4 36 60 61 102
    T_VARIABLE <string> (301) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 21 22 23 25 36 37 43 44 45 46 47 48 49 50 51 52 54 55 56 57 63 65 68 69 103 104 105 106 107 108 109 111 112 113 114 115 116
    T_IF (302) 30 31 32 33 34 35
    T_ELSE (303) 31 32 34 35
    T_EOL (304) 4 5 6 7 12 13 14 15 18 21 22 23 24 25 26 36 37 41 42 43 44 45 46 47 48 49 50 51 52 54 55 56 57
    T_RETURN (305) 26
    T_WHILE (306) 27 28 29
    T_FOR (307) 39 40
    T_BREAK (308) 42
    T_CONT (309) 41
    T_SWITCH (310) 53
    T_CASE (311) 60 61
    T_DEFAULT (312) 62
    T_VOID (313) 9 11 13 15
    T_UNSIGNED (314) 58 59


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    ROOT (61)
        on left: 1
        on right: 0
    FUNCTIONS <node> (62)
        on left: 2 3 4 5 6 7
        on right: 1 3 4 5 6 7
    FUNCT <node> (63)
        on left: 8 9 10 11 12 13 14 15 16 17 18
        on right: 2 3
    LINES <node> (64)
        on left: 19 20
        on right: 8 9 10 11 16 17 19 28 32 33 34 35 40 60 61 62
    LINE <node> (65)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 19 20 27 30 31 32 34 39 40
    AN_UNSIGNED <string> (66)
        on left: 58 59
        on right: 16 17 18 23
    SWITCH_BODY <node> (67)
        on left: 60 61 62
        on right: 53 60
    LINE2 <node> (68)
        on left: 63 64 65 66
        on right: 39 40
    FINALPARAMS <node> (69)
        on left: 67
        on right: 8 9 12 13 16 18
    PARAMS <node> (70)
        on left: 68 69
        on right: 67 68
    E1 <node> (71)
        on left: 70 71
        on right: 5 6 21 22 23 24 26 27 28 29 30 31 32 33 34 35 37 43 44 45 46 47 48 49 50 51 52 53 57 63 64 65 71 100 101 105 106 107 108 109 110 111
    E12 <node> (72)
        on left: 72 73
        on right: 70 71 73
    E21 <node> (73)
        on left: 74 75
        on right: 72 73 75
    E2 <node> (74)
        on left: 76 77
        on right: 74 75 77
    E3 <node> (75)
        on left: 78 79
        on right: 76 77 79
    E4 <node> (76)
        on left: 80 81 82
        on right: 78 79 81 82
    C1 <node> (77)
        on left: 83 84 85
        on right: 80 81 82 84 85
    C2 <node> (78)
        on left: 86 87 88 89 90
        on right: 83 84 85 87 88 89 90
    EXPR <node> (79)
        on left: 91 92 93
        on right: 86 87 88 89 90 92 93
    TERM <node> (80)
        on left: 94 95 96 97
        on right: 91 92 93 95 96 97
    UNARY <node> (81)
        on left: 98 99
        on right: 94 95 96 97
    IDK <node> (82)
        on left: 100 101
        on right: 101 109
    FACTOR <node> (83)
        on left: 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116
        on right: 98 99


State 0

    0 $accept: . ROOT $end

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_VOID      shift, and go to state 3
    T_UNSIGNED  shift, and go to state 4

    ROOT         go to state 5
    FUNCTIONS    go to state 6
    FUNCT        go to state 7
    AN_UNSIGNED  go to state 8


State 1

    4 FUNCTIONS: T_INT . T_VARIABLE T_LSQ T_NUMBER T_RSQ T_EOL FUNCTIONS
    5          | T_INT . T_VARIABLE T_ASSIGN E1 T_EOL FUNCTIONS
    7          | T_INT . T_VARIABLE T_EOL FUNCTIONS
    8 FUNCT: T_INT . T_VARIABLE FINALPARAMS T_OPEN LINES T_CLOSE
   10      | T_INT . T_VARIABLE T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   12      | T_INT . T_VARIABLE FINALPARAMS T_EOL
   14      | T_INT . T_VARIABLE T_LBRACKET T_RBRACKET T_EOL

    T_VARIABLE  shift, and go to state 9


State 2

    6 FUNCTIONS: T_VARIABLE . T_ASSIGN E1 T_EOL FUNCTIONS

    T_ASSIGN  shift, and go to state 10


State 3

    9 FUNCT: T_VOID . T_VARIABLE FINALPARAMS T_OPEN LINES T_CLOSE
   11      | T_VOID . T_VARIABLE T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   13      | T_VOID . T_VARIABLE FINALPARAMS T_EOL
   15      | T_VOID . T_VARIABLE T_LBRACKET T_RBRACKET T_EOL

    T_VARIABLE  shift, and go to state 11


State 4

   58 AN_UNSIGNED: T_UNSIGNED .
   59            | T_UNSIGNED . T_INT

    T_INT  shift, and go to state 12

    $default  reduce using rule 58 (AN_UNSIGNED)


State 5

    0 $accept: ROOT . $end

    $end  shift, and go to state 13


State 6

    1 ROOT: FUNCTIONS .

    $default  reduce using rule 1 (ROOT)


State 7

    2 FUNCTIONS: FUNCT .
    3          | FUNCT . FUNCTIONS

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_VOID      shift, and go to state 3
    T_UNSIGNED  shift, and go to state 4

    $default  reduce using rule 2 (FUNCTIONS)

    FUNCTIONS    go to state 14
    FUNCT        go to state 7
    AN_UNSIGNED  go to state 8


State 8

   16 FUNCT: AN_UNSIGNED . T_VARIABLE FINALPARAMS T_OPEN LINES T_CLOSE
   17      | AN_UNSIGNED . T_VARIABLE T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   18      | AN_UNSIGNED . T_VARIABLE FINALPARAMS T_EOL

    T_VARIABLE  shift, and go to state 15


State 9

    4 FUNCTIONS: T_INT T_VARIABLE . T_LSQ T_NUMBER T_RSQ T_EOL FUNCTIONS
    5          | T_INT T_VARIABLE . T_ASSIGN E1 T_EOL FUNCTIONS
    7          | T_INT T_VARIABLE . T_EOL FUNCTIONS
    8 FUNCT: T_INT T_VARIABLE . FINALPARAMS T_OPEN LINES T_CLOSE
   10      | T_INT T_VARIABLE . T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   12      | T_INT T_VARIABLE . FINALPARAMS T_EOL
   14      | T_INT T_VARIABLE . T_LBRACKET T_RBRACKET T_EOL

    T_ASSIGN    shift, and go to state 16
    T_LBRACKET  shift, and go to state 17
    T_LSQ       shift, and go to state 18
    T_EOL       shift, and go to state 19

    FINALPARAMS  go to state 20


State 10

    6 FUNCTIONS: T_VARIABLE T_ASSIGN . E1 T_EOL FUNCTIONS

    T_PP        shift, and go to state 21
    T_MM        shift, and go to state 22
    T_TIMES     shift, and go to state 23
    T_MINUS     shift, and go to state 24
    T_LBRACKET  shift, and go to state 25
    T_NUMBER    shift, and go to state 26
    T_VARIABLE  shift, and go to state 27

    E1      go to state 28
    E12     go to state 29
    E21     go to state 30
    E2      go to state 31
    E3      go to state 32
    E4      go to state 33
    C1      go to state 34
    C2      go to state 35
    EXPR    go to state 36
    TERM    go to state 37
    UNARY   go to state 38
    FACTOR  go to state 39


State 11

    9 FUNCT: T_VOID T_VARIABLE . FINALPARAMS T_OPEN LINES T_CLOSE
   11      | T_VOID T_VARIABLE . T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   13      | T_VOID T_VARIABLE . FINALPARAMS T_EOL
   15      | T_VOID T_VARIABLE . T_LBRACKET T_RBRACKET T_EOL

    T_LBRACKET  shift, and go to state 40

    FINALPARAMS  go to state 41


State 12

   59 AN_UNSIGNED: T_UNSIGNED T_INT .

    $default  reduce using rule 59 (AN_UNSIGNED)


State 13

    0 $accept: ROOT $end .

    $default  accept


State 14

    3 FUNCTIONS: FUNCT FUNCTIONS .

    $default  reduce using rule 3 (FUNCTIONS)


State 15

   16 FUNCT: AN_UNSIGNED T_VARIABLE . FINALPARAMS T_OPEN LINES T_CLOSE
   17      | AN_UNSIGNED T_VARIABLE . T_LBRACKET T_RBRACKET T_OPEN LINES T_CLOSE
   18      | AN_UNSIGNED T_VARIABLE . FINALPARAMS T_EOL

    T_LBRACKET  shift, and go to state 42

    FINALPARAMS  go to state 43


State 16

    5 FUNCTIONS: T_INT T_VARIABLE T_ASSIGN . E1 T_EOL FUNCTIONS

    T_PP        shift, and go to state 21
    T_MM        shift, and go to state 22
    T_TIMES     shift, and go to state 23
    T_MINUS     shift, and go to state 24
    T_LBRACKET  shift, and go to state 25
    T_NUMBER    shift, and go to state 26
    T_VARIABLE  shift, and go to state 27

    E1      go to state 44
    E12     go to state 29
    E21     go to state 30
    E2      go to state 31
    E3      go to state 32
    E4      go to state 33
    C1      go to state 34
    C2      go to state 35
    EXPR    go to state 36
    TERM    go to state 37
    UNARY   go to state 38
    FACTOR  go to state 39


State 17

   10 FUNCT: T_INT T_VARIABLE T_LBRACKET . T_RBRACKET T_OPEN LINES T_CLOSE
   14      | T_INT T_VARIABLE T_LBRACKET . T_RBRACKET T_EOL
   67 FINALPARAMS: T_LBRACKET . PARAMS T_RBRACKET

    T_INT       shift, and go to state 45
    T_RBRACKET  shift, and go to state 46

    PARAMS  go to state 47


State 18

    4 FUNCTIONS: T_INT T_VARIABLE T_LSQ . T_NUMBER T_RSQ T_EOL FUNCTIONS

    T_NUMBER  shift, and go to state 48


State 19

    7 FUNCTIONS: T_INT T_VARIABLE T_EOL . FUNCTIONS

    T_INT       shift, and go to state 1
    T_VARIABLE  shift, and go to state 2
    T_VOID      shift, and go to state 3
    T_UNSIGNED  shift, and go to state 4

    FUNCTIONS    go to state 49
    FUNCT        go to state 7
    AN_UNSIGNED  go to state 8


State 20

    8 FUNCT: T_INT T_VARIABLE FINALPARAMS . T_OPEN LINES T_CLOSE
   12      | T_INT T_VARIABLE FINALPARAMS . T_EOL

    T_OPEN  shift, and go to state 50
    T_EOL   shift, and go to state 51


State 21

  112 FACTOR: T_PP . T_VARIABLE

    T_VARIABLE  shift, and go to state 52


State 22

  113 FACTOR: T_MM . T_VARIABLE

    T_VARIABLE  shift, and go to state 53


State 23

  116 FACTOR: T_TIMES . T_VARIABLE

    T_VARIABLE  shift, and go to state 54


State 24

   99 UNARY: T_MINUS . FACTOR

    T_PP        shift, and go to state 21
    T_MM        shift, and go to state 22
    T_TIMES     shift, and go to state 23
    T_LBRACKET  shift, and go to state 25
    T_NUMBER    shift, and go to state 26
    T_VARIABLE  shift, and go to state 27

    FACTOR  go to state 55


State 25

  110 FACTOR: T_LBRACKET . E1 T_RBRACKET

    T_PP        shift, and go to state 21
    T_MM        shift, and go to state 22
    T_TIMES     shift, and go to state 23
    T_MINUS     shift, and go to state 24
    T_LBRACKET  shift, and go to state 25
    T_NUMBER    shift, and go to state 26
    T_VARIABLE  shift, and go to state 27

    E1      go to state 56
    E12     go to state 29
    E21     go to state 30
    E2      go to state 31
    E3      go to state 32
    E4      go to state 33
    C1      go to state 34
    C2      go to state 35
    EXPR    go to state 36
    TERM    go to state 37
    UNARY   go to state 38
    FACTOR  go to state 39


State 26

  102 FACTOR: T_NUMBER .

    $default  reduce using rule 102 (FACTOR)


State 27

  103 FACTOR: T_VARIABLE .
  104       | T_VARIABLE . T_LBRACKET T_RBRACKET
  105       | T_VARIABLE . T_LBRACKET E1 T_RBRACKET
  106       | T_VARIABLE . T_LBRACKET E1 T_COMMA E1 T_RBRACKET
  107       | T_VARIABLE . T_LBRACKET E1 T_COMMA E1 T_COMMA E1 T_RBRACKET
  108       | T_VARIABLE . T_LBRACKET E1 T_COMMA E1 T_COMMA E1 T_COMMA E1 T_RBRACKET
  109       | T_VARIABLE . T_LBRACKET E1 T_COMMA E1 T_COMMA E1 T_COMMA E1 T_COMMA IDK T_RBRACKET
  111       | T_VARIABLE . T_LSQ E1 T_RSQ
  114       | T_VARIABLE . T_PP
  115       | T_VARIABLE . T_MM

    T_PP        shift, and go to state 57
    T_MM        shift, and go to state 58
    T_LBRACKET  shift, and go to state 59
    T_LSQ       shift, and go to state 60

    $default  reduce using rule 103 (FACTOR)


State 28

    6 FUNCTIONS: T_VARIABLE T_ASSIGN E1 . T_EOL FUNCTIONS
   71 E1: E1 . T_LOR E12

    T_LOR  shift, and go to state 61
    T_EOL  shift, and go to state 62


State 29

   70 E1: E12 .
   73 E12: E12 . T_LAND E21

    T_LAND  shift, and go to state 63

    $default  reduce using rule 70 (E1)


State 30

   72 E12: E21 .
   75 E21: E21 . T_BOR E2

    T_BOR  shift, and go to state 64

    $default  reduce using rule 72 (E12)


State 31

   74 E21: E2 .
   77 E2: E2 . T_XOR E3

    T_XOR  shift, and go to state 65

    $default  reduce using rule 74 (E21)


State 32

   76 E2: E3 .
   79 E3: E3 . T_BAND E4

    T_BAND  shift, and go to state 66

    $default  reduce using rule 76 (E2)


State 33

   78 E3: E4 .
   81 E4: E4 . T_ALS C1
   82   | E4 . T_ARS C1

    T_ARS  shift, and go to state 67
    T_ALS  shift, and go to state 68

    $default  reduce using rule 78 (E3)


State 34

   80 E4: C1 .
   84 C1: C1 . T_ASSIGN T_ASSIGN C2
   85   | C1 . T_NOT T_ASSIGN C2

    T_ASSIGN  shift, and go to state 69
    T_NOT     shift, and go to state 70

    $default  reduce using rule 80 (E4)


State 35

   83 C1: C2 .
   87 C2: C2 . T_LESS EXPR
   88   | C2 . T_LESSEQUAL EXPR
   89   | C2 . T_GREAT EXPR
   90   | C2 . T_GREATEQUAL EXPR

    T_LESS        shift, and go to state 71
    T_GREAT       shift, and go to state 72
    T_LESSEQUAL   shift, and go to state 73
    T_GREATEQUAL  shift, and go to state 74

    $default  reduce using rule 83 (C1)


State 36

   86 C2: EXPR .
   92 EXPR: EXPR . T_PLUS TERM
   93     | EXPR . T_MINUS TERM

    T_PLUS   shift, and go to state 75
    T_MINUS  shift, and go to state 76

    $default  reduce using rule 86 (C2)


State 37

   91 EXPR: TERM .
   95 TERM: TERM . T_TIMES UNARY
   96     | TERM . T_DIVIDE UNARY
   97     | TERM . T_MOD UNARY

    T_TIMES   shift, and go to state 77
    T_DIVIDE  shift, and go to state 78
    T_MOD     shift, and go to state 79

    $default  reduce using rule 91 (EXPR)


State 38

   94 TERM: UNARY .

    $default  reduce using rule 94 (TERM)


State 39

   98 UNARY: FACTOR .

    $default  reduce using rule 98 (UNARY)


State 40

   11 FUNCT: T_VOID T_VARIABLE T_LBRACKET . T_RBRACKET T_OPEN LINES T_CLOSE
   15      | T_VOID T_VARIABLE T_LBRACKET . T_RBRACKET T_EOL
   67 FINALPARAMS: T_LBRACKET . PARAMS T_RBRACKET

    T_INT       shift, and go to state 45
    T_RBRACKET  shift, and go to state 80

    PARAMS  go to state 47


State 41

    9 FUNCT: T_VOID T_VARIABLE FINALPARAMS . T_OPEN LINES T_CLOSE
   13      | T_VOID T_VARIABLE FINALPARAMS . T_EOL

    T_OPEN  shift, and go to state 81
    T_EOL   shift, and go to state 82


State 42

   17 FUNCT: AN_UNSIGNED T_VARIABLE T_LBRACKET . T_RBRACKET T_OPEN LINES T_CLOSE
   67 FINALPARAMS: T_LBRACKET . PARAMS T_RBRACKET

    T_INT       shift, and go to state 45
    T_RBRACKET  shift, and go to state 83

    PARAMS  go to state 47


State 43

   16 FUNCT: AN_UNSIGNED T_VARIABLE FINALPARAMS . T_OPEN LINES T_CLOSE
   18      | AN_UNSIGNED T_VARIABLE FINALPARAMS . T_EOL

    T_OPEN  shift, and go to state 84
    T_EOL   shift, and go to state 85


State 44

    5 FUNCTIONS: T_INT T_VARIABLE T_ASSIGN E1 . T_EOL FUNCTIONS
   71 E1: E1 . T_LOR E12

    T_LOR  shift, and go to state 61
    T_EOL  shift, and go to state 86


State 45

   68 PARAMS: T_INT . T_VARIABLE T_COMMA PARAMS
   69       | T_INT . T_VARIABLE

    T_VARIABLE  shift, and go to state 87


State 46

   10 FUNCT: T_INT T_VARIABLE T_LBRACKET T_RBRACKET . T_OPEN LINES T_CLOSE
   14      | T_INT T_VARIABLE T_LBRACKET T_RBRACKET . T_EOL

    T_OPEN  shift, and go to state 88
    T_EOL   shift, and go to state 89


State 47

   67 FINALPARAMS: T_LBRACKET PARAMS . T_RBRACKET

    T_RBRACKET  shift, and go to state 90


State 48

    4 FUNCTIONS: T_INT T_VARIABLE T_LSQ T_NUMBER . T_RSQ T_EOL FUNCTIONS

    T_RSQ  shift, and go to state 91


State 49

    7 FUNCTIONS: T_INT T_VARIABLE T_EOL FUNCTIONS .

    $default  reduce using rule 7 (FUNCTIONS)


State 50

    8 FUNCT: T_INT T_VARIABLE FINALPARAMS T_OPEN . LINES T_CLOSE

    T_INT       shift, and go to state 92
    T_PP        shift, and go to state 21
    T_MM        shift, and go to state 22
    T_TIMES     shift, and go to state 93
    T_MINUS     shift, and go to state 24
    T_LBRACKET  shift, and go to state 25
    T_NUMBER    shift, and go to state 26
    T_VARIABLE  shift, and go to state 94
    T_IF        shift, and go to state 95
    T_RETURN    shift, and go to state 96
    T_WHILE     shift, and go to state 97
    T_FOR       shift, and go to state 98
    T_BREAK     shift, and go to state 99
    T_CONT      shift, and go to state 100
    T_SWITCH    shift, and go to state 101
    T_UNSIGNED  shift, and go to state 4

    T_INT       [reduce using rule 38 (LINE)]
    T_PP        [reduce using rule 38 (LINE)]
    T_MM        [reduce using rule 38 (LINE)]
    T_TIMES     [reduce using rule 38 (LINE)]
    T_MINUS     [reduce using rule 38 (LINE)]
    T_LBRACKET  [reduce using rule 38 (LINE)]
    T_NUMBER    [reduce using rule 38 (LINE)]
    T_VARIABLE  [reduce using rule 38 (LINE)]
    T_IF        [reduce using rule 38 (LINE)]
    T_RETURN    [reduce using rule 38 (LINE)]
    T_WHILE     [reduce using rule 38 (LINE)]
    T_FOR       [reduce using rule 38 (LINE)]
    T_BREAK     [reduce using rule 38 (LINE)]
    T_CONT      [reduce using rule 38 (LINE)]
    T_SWITCH    [reduce using rule 38 (LINE)]
    T_UNSIGNED  [reduce using rule 38 (LINE)]
    $default    reduce using rule 38 (LINE)

    LINES        go to state 102
    LINE         go to state 103
    AN_UNSIGNED  go to state 104
    E1           go to state 105
    E12          go to state 29
    E21          go to state 30
    E2           go to state 31
    E3           go to state 32
    E4           go to state 33
    C1           go to state 34
    C2           go to state 35
    EXPR         go to state 36
    TERM         go to state 37
    UNARY        go to state 38
    FACTOR       go to state 39


State 51

   12 FUNCT: T_INT T_VARIABLE FINALPARAMS T_EOL .

    $default  reduce using rule 12 (FUNCT)


State 52

  112 FACTOR: T_PP T_VARIABLE .

    $default  reduce using rule 112 (FACTOR)


State 53

  113 FACTOR: T_MM T_VARIABLE .

    $default  reduce using rule 113 (FACTOR)


State 54

  116 FACTOR: T_TIMES T_VARIABLE .

    $default  reduce using rule 116 (FACTOR)


State 55

   99 UNARY: T_MINUS FACTOR .

    $default  reduce using rule 99 (UNARY)


State 56

   71 E1: E1 . T_LOR E12
  110 FACTOR: T_LBRACKET E1 . T_RBRACKET

    T_LOR       shift, and go to state 61
    T_RBRACKET  shift, and go to state 106


State 57

  114 FACTOR: T_VARIABLE T_PP .

    $default  reduce using rule 114 (FACTOR)


State 58

  115 FACTOR: T_VARIABLE T_MM .

    $default  reduce using rule 115 (FACTOR)


State 59

  104 FACTOR: T_VARIABLE T_LBRACKET . T_RBRACKET
  105       | T_VARIABLE T_LBRACKET . E1 T_RBRACKET
  106       | T_VARIABLE T_LBRACKET . E1 T_COMMA E1 T_RBRACKET
  107       | T_VARIABLE T_LBRACKET . E1 T_COMMA E1 T_COMMA E1 T_RBRACKET
  108       | T_VARIABLE T_LBRACKET . E1 T_COMMA E1 T_COMMA E1 T_COMMA E1 T_RBRACKET
  109       | T_VARIABLE T_LBRACKET . E1 T_COMMA E1 T_COMMA E1 T_COMMA E1 T_COMMA IDK T_RBRACKET

    T_PP        shift, and go to state 21
    T_MM        shift, and go to state 22
    T_TIMES     shift, and go to state 23
    T_MINUS     shift, and go to state 24
    T_LBRACKET  shift, and go to state 25
    T_RBRACKET  shift, and go to state 107
    T_NUMBER    shift, and go to state 26
    T_VARIABLE  shift, and go to state 27

    E1      go to state 108
    E12     go to state 29
    E21     go to state 30
    E2      go to state 31
    E3      go to state 32
    E4      go to state 33
    C1      go to state 34
    C2      go to state 35
    EXPR    go to state 36
    TERM    go to state 37
    UNARY   go to state 38
    FACTOR  go to state 39


State 60

  111 FACTOR: T_VARIABLE T_LSQ . E1 T_RSQ
